<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/enter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_name"
        android:textColorHint="@color/colorBorder"
        android:textSize="12dp"
        android:inputType="text"
        android:background="@drawable/brown_border"
        android:maxLines="1"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorBlack"
        android:padding="12dp"/>
    <EditText
        android:id="@+id/enter_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:textColorHint="@color/colorBorder"
        android:textSize="12dp"
        android:inputType="text"
        android:background="@drawable/brown_border"
        android:maxLines="1"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorBlack"
        android:padding="12dp"/>
    <EditText
        android:id="@+id/borrower_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/borrower_name"
        android:textColorHint="@color/colorBorder"
        android:textSize="12dp"
        android:inputType="text"
        android:background="@drawable/brown_border"
        android:maxLines="1"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorBlack"
        android:padding="12dp"/>
    <EditText
        android:id="@+id/borrower_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/borrower_email"
        android:textColorHint="@color/colorBorder"
        android:textSize="12dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/brown_border"
        android:maxLines="1"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorBlack"
        android:padding="12dp"/>
    <EditText
        android:id="@+id/date_lent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_lent"
        android:textColorHint="@color/colorBorder"
        android:textSize="12dp"
        android:inputType="date"
        android:background="@drawable/brown_border"
        android:maxLines="1"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorBlack"
        android:padding="12dp"
        android:clickable="true"/>
    <EditText
        android:id="@+id/date_returned"
        android:requiresFadingEdge="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/expected_return_date"
        android:textColorHint="@color/colorBorder"
        android:textSize="12dp"
        android:inputType="date"
        android:background="@drawable/brown_border"
        android:maxLines="1"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorBlack"
        android:padding="12dp"/>
</LinearLayout>
</ScrollView>